# cpp-termio

./: .gitignore  CMakeLists.txt  README.md  mk
.github/workflows/: build.yml
artifacts/: README.md
examples/: simple-colors.cpp
include/termio/: termio.hpp
includes/termio/: termio.hpp
src/: termio.cpp
tests/: termio_tests.cpp
